RESOLVED FIXED138849
AX: Safari fails to load a web page with VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=138849
Summary AX: Safari fails to load a web page with VoiceOver
chris fleizach
Reported 2014-11-18 15:55:33 PST
Attachments
patch (4.01 KB, patch)
2014-11-18 15:57 PST, chris fleizach
no flags
chris fleizach
Comment 1 2014-11-18 15:57:20 PST
WebKit Commit Bot
Comment 2 2014-11-19 09:36:21 PST
Comment on attachment 241824 [details] patch Clearing flags on attachment: 241824 Committed r176321: <http://trac.webkit.org/changeset/176321>
WebKit Commit Bot
Comment 3 2014-11-19 09:36:25 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 4 2015-04-03 15:30:44 PDT
Comment on attachment 241824 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=241824&action=review > LayoutTests/accessibility/inline-block-assertion.html:8 > +<embed src="../resources/test.swf" type="application/x-shockwave-flash" allowfullscreen="true" width="362" height="298" data-original-width="425" data-original-height="350"> Chris, do you remember if there was a reason to have this element? We can't have Flash in layout tests, because it's not necessarily installed on all machines.
chris fleizach
Comment 5 2015-04-03 15:52:06 PDT
Comment on attachment 241824 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=241824&action=review >> LayoutTests/accessibility/inline-block-assertion.html:8 >> +<embed src="../resources/test.swf" type="application/x-shockwave-flash" allowfullscreen="true" width="362" height="298" data-original-width="425" data-original-height="350"> > > Chris, do you remember if there was a reason to have this element? We can't have Flash in layout tests, because it's not necessarily installed on all machines. I think I needed an attachment view to make this test hit the crash
Alexey Proskuryakov
Comment 6 2015-04-03 16:55:03 PDT
Makes sense! I'm going to change it to an <embed> with no parameters in bug 143391, hopefully that exercises the same code path.
Note You need to log in before you can comment on or make changes to this bug.